[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sweet_animated_death_showing_the_way_tattoo_design.png" type="Texture" id=1]
[ext_resource path="res://Menu/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Art/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="TextureButton" type="TextureButton"]
margin_right = 480.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
arrow_margin = 55

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Text Button [/center]"
text = " Text Button "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grim1" type="Sprite" parent="."]
position = Vector2( 185, 5 )
scale = Vector2( 0.0260937, 0.025463 )
texture = ExtResource( 1 )

[node name="grim2" type="Sprite" parent="."]
position = Vector2( 295, 5 )
scale = Vector2( 0.0260937, 0.025463 )
texture = ExtResource( 1 )
flip_h = true

[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
